# autonomous-obstacle-avoidance

./: CMakeLists.txt  COMMAND.md  README.md  package.xml  setup.py
config/: tracker_params.yaml
include/final_project/tracker/: UKF.hpp  kalman_filter.hpp  kalman_filter_3d.hpp  measurement.hpp  multi_tracker.hpp  track_manager.hpp  tracker_node.hpp
launch/: tracker.launch.py
scripts/: detect3d.py
scripts/trackers/: filters.py  tracker.py
scripts/vision/: detect3d.py  detection_cv.py  detections.py  fast_detections.py  record.py
src/: UKF.cpp  kalman_filter.cpp  kalman_filter_3d.cpp  main.cpp  multi_tracker.cpp  track_manager.cpp  tracker_node.cpp
