<?xml version="1.0"?>
<package format="3">
  <name>final_project</name>
  <version>0.0.0</version>
  <description>Final project - 3D detection + control</description>
  <maintainer email="jtappen@gmail.com">nvidia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>libeigen3-dev</depend>
  <depend>tf2_eigen</depend>
  <depend>message_filters</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>overtake_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>